Bug 130157 - Line Sidebar width color transparency, corner and cap style didn't work
Summary: Line Sidebar width color transparency, corner and cap style didn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-23 23:42 UTC by andreas_k
Modified: 2020-12-10 00:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2020-01-23 23:42:11 UTC
After the update of the Line Sidebar only Line and Arrow widget work all other widgets are grayed out and didn't work.

In the dialog you can edit them.
Comment 1 Commit Notification 2020-01-25 17:33:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ee6b19259647aae001ff0f4150cbb0483e6786ec

tdf#130157 Line Sidebar width, color, transparency, etc didn't work

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.