tdf#130157 Line Sidebar width, color, transparency, etc didn't work

Change-Id: I705e4ada386300ed626688b4e898227b60bff6a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87353
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>